--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           </thead>
           <tbody>
             <tr>
-              <td><input type="text" name="subject" required /></td>
-              <td>
+              <td data-label="Môn học"><input type="text" name="subject" required /></td>
+              <td data-label="Số tín chỉ">
                 <input type="number" name="credit" min="1" value="3" required />
               </td>
-              <td>
+              <td data-label="Điểm chữ">
                 <select name="grade" required>
                   <option value="A">A</option>
                   <option value="B+">B+</option>
@@ -37,7 +37,7 @@
                   <option value="F">F</option>
                 </select>
               </td>
-              <td>
+              <td data-label="Xóa">
                 <button type="button" onclick="removeRow(this)">X</button>
               </td>
             </tr>
